k8s/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-porto-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      framework: react
      appname: react-porto
  template:
    metadata:
      labels:
        framework: react
        appname: react-porto
    spec:
      containers:
        - name: react-porto
          image: ghcr.io/haikalrfadhilahh/haik-react-portofolio:1.31
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 250m
              memory: 200Mi
