k8s/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-porto-service
spec:
  type: ClusterIP
  selector:
    framework: react
    appname: react-porto
  ports:
    - port: 80
      targetPort: 80
